# skill_swap_platform

./: README.md
backend/: .gitignore  main.py  pyproject.toml  skill_swap.db  test_api.ps1  test_api.py  test_api_pytest.py
backend/app/: auth.py  database.py  schemas.py
backend/app/routers/: admin.py  auth.py  skills.py  swaps.py  users.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts  skills.ts  swaps.ts  users.ts
frontend/src/views/: HomeView.vue  NotFoundView.vue
frontend/src/views/admin/: AdminDashboard.vue
frontend/src/views/auth/: LoginView.vue  RegisterView.vue
frontend/src/views/skills/: MySkillsView.vue  SkillsView.vue
frontend/src/views/swaps/: MySwapsView.vue  SwapsView.vue
frontend/src/views/user/: ProfileView.vue  UserProfileView.vue
